[package]
name = "ruster"
version = "0.4.0"
authors = ["krircc <krircc@aliyun.com>"]

[[test]]
name = "tests"
path = "tests/lib.rs"

[dependencies]
serde = "^1.0.0"
serde_derive = "^1.0.0"
serde_json = "^1.0.0"
diesel = { version = "1.3.2", features = ["postgres","chrono","serde_json", "r2d2"] }
data-encoding = "2.1"
num_cpus = "1.8"
regex = "1.0.0"
jsonwebtoken = "^5.0.1"

actix-web = { version = "0.7", default-features = false }
http = "0.1.7"
postgres = {version= "0.15.2", features = ["with-chrono"]}
dotenv = "0.13.0"
chrono = { version = "0.4", features = ["serde"] }
bcrypt = "0.2.0"
env_logger = "0.5.10"
futures = "0.1.21"
ring = "0.13.2"
pulldown-cmark = "0.1.2"
timeago = "0.1.5"